Updated GWT compilation settings